# Windows-App-Installer-Toolkit

./: .gitignore  CMakeLists.txt  README.md  app.manifest  app.rc  applications.h  main.cpp  settings.cpp  settings.h  winappinstaller.cpp  winappinstaller.h  winget_service.cpp  winget_service.h
